# tinyhttp-yew-fullstack-demo

./: .gitignore  Cargo.toml  README.md  start_server.sh
backend/: Cargo.toml
backend/public/: frontend-275b5f5b3a1e32bd.js  frontend-275b5f5b3a1e32bd_bg.wasm  frontend-2d2a3bf77af715c4.js  frontend-2d2a3bf77af715c4_bg.wasm  frontend-8055f2ee375a0a4d.js  frontend-8055f2ee375a0a4d_bg.wasm  index.html
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
